--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -127,7 +127,7 @@
         <p style="font-family:MinionRoman;font-size:15em;color:white;text-align:center;text-shadow: 10px 10px #4f3528;">So what is a Herbarium?</p>
       </div>
       
-      <div class="c1 r1 w1 h1 image" style="background-image: url(); background: green" data-begin="3s" data-timecontainer="par">
+      <div class="c1 r1 w1 h3 image" style="background-image: url(images/timeline-images/NewHerbarium3.jpg); background-size: cover" data-begin="3s" data-timecontainer="par">
       </div>
       
       <div data-timecontainer="par" data-role="audience" 
