--- a/sites/commencement/index.html
+++ b/sites/commencement/index.html
@@ -383,7 +383,7 @@
             <div class="timeline-label" data-begin="2s" style="top: 1500px; left: 4600px">19,782 specimens</div>
             <div class="r1 c4 h1 w1"><span style="font-size:52em;color:#e6dec4;width:100%;margin-left:5%;">2008</span></div>
             <div class="r1 c3 h1 w1 textpanel"><span style="text-align:left;padding-left:1em;font-size:80%;width:85%;">Erika Edwards became herbarium curator</span></div>
-            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/);background-size:cover;"></div>
+            <div class="r1 c2 h2 w1 image" style="background-image: url(images/timeline-images/ErikaEdwards.jpg);background-size:cover;"></div>
             <!-- <div class="r2 c4 h2 w1" style="background-image: url(images/timeline-images/);background-size:cover;"></div> -->
           </div>
 
